--- a/css/style.css
+++ b/css/style.css
@@ -721,7 +721,7 @@ span a {
   }
 
   .home-img img {
-    width: 40vw;
+    width: 45vw;
     margin-top: 4rem;
   }
 
@@ -740,7 +740,7 @@ span a {
   }
 
   .about img {
-    width: 40vw;
+    width: 45vw;
     margin-top: 4rem;
   }
 
@@ -820,5 +820,33 @@ span a {
 @media (max-width: 320px) {
   .liquid-shape {
     display: none;
+  }
+  .home-img img {
+    width: 45vw;
+  }
+
+  .about-img {
+    width: 45vw;
+  }
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
+    background: var(--bg-color);
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    display: none;
+  }
+
+  .navbar.active {
+    display: block;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
   }
 }
